--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
     <title>Crud Basico</title>
 </head>
 <body>
-    
+     <main>
+      <div class="container">
+        <form>
+          <h2>Agregar nuevo usuario</h2>
+          <div class="form-group">
+            <label for="name">Nombre:</label>
+            <input type="text" id="name" required />
+          </div>
+          <div class="form-group">
+            <label for="email">Correo electrónico:</label>
+            <input type="email" id="email" required />
+          </div>
+          <div class="form-group">
+            <button type="submit">Agregar</button>
+          </div>
+        </form>
+        <hr />
+        <table>
+          <thead>
+            <tr>
+              <th>Nombre</th>
+              <th>Correo electrónico</th>
+              <th>Acciones</th>
+            </tr>
+          </thead>
+          <tbody id="user-list">
+          </tbody>
+        </table>
+      </div>
 </body>
 </html>
