--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <title>Crud Basico</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
         <form>
           <h2>Agregar nuevo usuario</h2>
           <div class="form-group">
-            <label for="name">Nombre:</label>
+            <label for="name"Nombre: label>
             <input type="text" id="name" required />
           </div>
           <div class="form-group">
@@ -36,5 +37,7 @@
           </tbody>
         </table>
       </div>
+     </main>
+    <script src="script.js"></script>
 </body>
 </html>
